<resources>
    <string name="app_name">Calculator App</string>
    <string name="Calculator">Calculator</string>
    <string name="first_number">first_number</string>
    <string name="second_number">second_number</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="result">TextView</string>
</resources>